# IndiDermX

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  summary.md
.github/prompts/: plan-hierarchicalDermatologyDiagnosis.prompt.md
frontend_service/: app.py
frontend_service/static/: index.html
hyperderm/: __init__.py
hyperderm/api/: app.py  dependencies.py
hyperderm/api/routes/: chatbot.py  diagnosis.py
hyperderm/core/: config.py
hyperderm/domain/: schemas.py
hyperderm/infrastructure/backup/: jsonl_store.py
hyperderm/infrastructure/clients/: literature.py
hyperderm/infrastructure/graph/: neo4j_store.py
hyperderm/mcp/: __init__.py  __main__.py  http_app.py  langgraph_mcp_tool.py  run_http.py  run_stdio.py  server.py
hyperderm/scripts/: __main__.py  build_kg.py  run_infer.py  run_stack.py
hyperderm/services/: conversation_memory.py  diagnosis_service.py  evidence_service.py  feature_extractor.py  graph_rag_service.py  local_backup_diagnosis_service.py  local_rag_service.py  medgemma_chat_service.py  model_clients.py  privacy.py  symptom_effect_service.py
hyperderm/workflows/: chatbot_graph.py  diagnosis_graph.py
tests/: test_agentic_rag_workflow.py  test_medgemma_chat_service.py  test_multi_agent_chatbot_graph.py
