[project]
name = "hyperderm-graph"
version = "0.1.0"
description = "Hierarchical dermatology diagnosis with Neo4j, LangGraph, and FastAPI"
readme = "summary.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "neo4j>=5.24.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.14",
  "tqdm>=4.66.0",
  "bytez>=3.0.1"
]

[project.scripts]
build-kg = "hyperderm.scripts.build_kg:main"
run-infer = "hyperderm.scripts.run_infer:main"

[tool.uv]
dev-dependencies = []
