[project]
name = "hyperderm-graph"
version = "0.1.0"
description = "Hierarchical dermatology diagnosis with Neo4j, LangGraph, and FastAPI"
readme = "summary.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "neo4j>=5.24.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.14",
  "tqdm>=4.66.0",
  "bytez>=3.0.1",
  "python-multipart>=0.0.9"
]

[project.scripts]
build-kg = "hyperderm.scripts.build_kg:main"
run-infer = "hyperderm.scripts.run_infer:main"
run-frontend = "frontend_service.app:main"
run-mcp-stdio = "hyperderm.mcp.run_stdio:main"
run-mcp-http = "hyperderm.mcp.run_http:main"
run-stack = "hyperderm.scripts.run_stack:main"

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
]
